# rmp-python-api

./: README.md  client.py  main.py  mkdocs.yml  models.py  pyproject.toml
docs/: index.md
docs/api/: client.md  models.md  scoring.md
queries/: rating_list.graphql  school_search.graphql  teacher_search.graphql
rmp_api/: __init__.py  client.py  models.py
rmp_api/scoring/: __init__.py  helpers.py  score.py  signals.py
tests/: conftest.py  test_client.py  test_scoring.py
